<resources>
    <string name="app_name">Login</string>
    <string name="input_account">输入账号</string>
    <string name="input_password">密码</string>
    <string name="login">登 录</string>
    <string name="text_qq">QQ</string>
    <string name="login_message" >阅读并同意</string>
    <string name="login_terms_of_service">服务条款</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_register">注册账号</string>
    <string name="text_oo">OO</string>
</resources>
